--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,13 @@
 html,body {
   margin: 0px;
-  font-family: 'adobe-garamond-pro', sans-serif;
+  font-family: 'Poiret One', sans-serif;
   font-weight: normal;
   color: white;
+  user-select: none;
+  -ms-user-select: none;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
 }
 
 #container {
@@ -21,37 +26,118 @@ html,body {
   height: 100%;
 }
 
-#intro {
+#overbar {
+  z-index: 5;
   position: absolute;
-  left: 50%;
-  top: 50px;
-  width: 320px;
-  margin-left: -160px;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 50px;
+  background: rgba(0,0,0,0.8);
   text-align: center;
 }
 
-#intro p,h1 {
-  user-select: none;
-  -ms-user-select: none;
-  -moz-user-select: none;
-  -webkit-user-select: none;
-  -webkit-touch-callout: none;
+.top-button {
+  height: 50px;
+  width: 100px;
+  margin: 0px;
+  padding: 0px;
+  display: inline-block;
+  cursor: pointer;
+  vertical-align: bottom;
+}
+
+.top-button p {
+  margin-top: 16px;
+  font-size: 18px;
+}
+
+#button-logo {
+  height: 50px;
+  width: 50px;
+  margin: 0 auto;
+  background-image: url('../img/logo.png');
+  background-size: 32px 32px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  cursor: pointer;
+}
+
+#info, #menu {
+  position: absolute;
+  left: 50%;
+  margin-top: 0px;
+  width: 320px;
+  margin-left: -180px;
+  padding: 20px;
+  text-align: center;
+  font-size: 18px;
+  background: rgba(0,0,0,0.8);
+  opacity: 0;
+  transition: opacity 300ms ease, margin-top 300ms ease;
+}
+
+#info.active {
+  margin-top: 50px;
+  opacity: 1;
+}
+
+#info.inactive {
+  margin-top: 0px;
+  opacity: 0;
+}
+
+#menu.active {
+  margin-top: 50px;
+  opacity: 1;
+}
+
+#menu.inactive {
+  margin-top: 0px;
+  opacity: 0;
 }
 
 #logo {
-  background-image: url('../logo.png');
+  background-image: url('../img/logo.png');
   background-size: 32px 32px;
   width: 32px;
   height: 32px;
   margin-left: 144px;
 }
 
-#menu {
-  position: absolute;
-  left: 20px;
-  top: 20px;
-  width: 320px;
+menuItem {
+  cursor: pointer;
 }
 
-menuItem {
+#loading-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: url('../img/mandala_occlusion_dark.png');
+  background-color: black;
+  background-repeat: no-repeat;
+  background-position: center;
+  opacity: 0;
+  display: none;
+}
+
+loadingElement {
+  width: 98%;
+  height: 90%;
+  margin-top: 5%;
+  overflow: hidden;
+  text-align: center;
+}
+
+loadingElement elementName {
+  width: 100%;
+  text-align: center;
+  margin-top: 15px;
+}
+
+loadingElement progressBar {
+  margin: 0 auto;
+  background-color: white;
+  height: 15px;
+  width: 100px;
 }
