--- a/css/style.css
+++ b/css/style.css
@@ -45,16 +45,16 @@ html,body {
   display: inline-block;
   cursor: pointer;
   vertical-align: bottom;
-  border-bottom: 2px solid #000;
+  border-bottom: 2px solid rgba(0,0,0,0);
   transition: border-bottom 400ms ease;
 }
 
 .top-button:hover {
-  border-bottom: 2px solid #f00;
+  border-bottom: 2px solid rgba(255,0,0,1);
 }
 
 .button-active {
-  border-bottom: 2px solid #f00;
+  border-bottom: 2px solid rgba(255,0,0,1);
 }
 
 .top-button p {
