--- a/css/style.css
+++ b/css/style.css
@@ -148,34 +148,40 @@ html,body {
 }
 
 #loading-overlay {
+  z-index: 6;
   position: absolute;
   width: 100%;
   height: 100%;
-  background-image: url('../img/mandala_occlusion_dark.png');
+  background-color: black;
+  /*background-image: url('../img/mandala_occlusion_dark.png');
   background-color: black;
   background-repeat: no-repeat;
-  background-position: center;
+  background-position: center;*/
   opacity: 0;
-  display: none;
+  visibility: hidden;
+  transition: opacity 300ms ease;
 }
 
-loadingElement {
+#loading-overlay.overlay-active {
+  visibility: visible;
+  opacity: 1;
+}
+
+#loadingElement {
   width: 98%;
-  height: 90%;
   margin-top: 5%;
-  overflow: hidden;
   text-align: center;
 }
 
-loadingElement elementName {
+.elementName {
   width: 100%;
   text-align: center;
   margin-top: 15px;
 }
 
-loadingElement progressBar {
-  margin: 0 auto;
+.progressBar {
+  margin: 2px auto;
   background-color: white;
-  height: 15px;
+  height: 2px;
   width: 100px;
 }
