--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@ html,body {
   left: 0px;
   width: 100%;
   height: 100%;
+  background-color: black;
 }
 
 #ui-overlay {
@@ -184,4 +185,17 @@ html,body {
   background-color: white;
   height: 2px;
   width: 100px;
+}
+
+#disabled-overlay {
+  position: absolute;
+  z-index: 7;
+  width: 100%;
+  visibility: hidden;
+}
+
+#disabled-text {
+  margin: 100px auto;
+  width: 400px;
+  text-align: center;
 }
